# PorusCpp

./: .gitignore  CMakeLists.txt  README.md  app
resources/: theme.qss
src/: main.cpp
src/Algorithm/: Algorithm.cpp  Algorithm.h  CloseGap.cpp  CloseGap.h
src/Components/: ActionHistory.h  HistoryOptions.cpp  HistoryOptions.h  PointHandle.cpp  PointHandle.h  Polygon.cpp  Polygon.h
src/Pages/: EditPage.cpp  EditPage.h  ImagePopup.cpp  ImagePopup.h  ImportPage.cpp  ImportPage.h  SettingsPopup.cpp  SettingsPopup.h
src/Widgets/: CropDimOverlay.h  GraphicsView.cpp  GraphicsView.h  GraphicsViewEdit.cpp  GraphicsViewEdit.h  ImageEditor.cpp  ImageEditor.h  ImageToolbar.cpp  ImageToolbar.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  PushButton.cpp  PushButton.h  ScalebarDialog.cpp  ScalebarDialog.h  SubtitleLabel.cpp  SubtitleLabel.h  TaskButton.cpp  TaskButton.h  Taskbar.cpp  Taskbar.h  TitleLabel.cpp  TitleLabel.h  ToolButton.cpp  ToolButton.h  Tools.h
src/resources/: resources.qrc  theme.qss
